; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_recreate_fbo.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_recreate_fbo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_fbo_rect = type { i32, i32 }

@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@RARCH_GL_INTERNAL_FORMAT32 = common dso_local global i32 0, align 4
@RARCH_GL_TEXTURE_TYPE32 = common dso_local global i32 0, align 4
@RARCH_GL_FORMAT32 = common dso_local global i32 0, align 4
@RARCH_GL_FRAMEBUFFER = common dso_local global i32 0, align 4
@RARCH_GL_COLOR_ATTACHMENT0 = common dso_local global i32 0, align 4
@RARCH_GL_FRAMEBUFFER_COMPLETE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [37 x i8] c"Failed to reinitialize FBO texture.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.video_fbo_rect*, i32, i32*)* @gl2_recreate_fbo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl2_recreate_fbo(%struct.video_fbo_rect* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.video_fbo_rect*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.video_fbo_rect* %0, %struct.video_fbo_rect** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @gl2_bind_fb(i32 %8)
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @glDeleteTextures(i32 1, i32* %10)
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @glGenTextures(i32 1, i32* %12)
  %14 = load i32, i32* @GL_TEXTURE_2D, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @glBindTexture(i32 %14, i32 %16)
  %18 = load i32, i32* @GL_TEXTURE_2D, align 4
  %19 = load i32, i32* @RARCH_GL_INTERNAL_FORMAT32, align 4
  %20 = load %struct.video_fbo_rect*, %struct.video_fbo_rect** %5, align 8
  %21 = getelementptr inbounds %struct.video_fbo_rect, %struct.video_fbo_rect* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.video_fbo_rect*, %struct.video_fbo_rect** %5, align 8
  %24 = getelementptr inbounds %struct.video_fbo_rect, %struct.video_fbo_rect* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @RARCH_GL_TEXTURE_TYPE32, align 4
  %27 = load i32, i32* @RARCH_GL_FORMAT32, align 4
  %28 = call i32 @gl2_load_texture_image(i32 %18, i32 0, i32 %19, i32 %22, i32 %25, i32 0, i32 %26, i32 %27, i32* null)
  %29 = load i32, i32* @RARCH_GL_FRAMEBUFFER, align 4
  %30 = load i32, i32* @RARCH_GL_COLOR_ATTACHMENT0, align 4
  %31 = load i32, i32* @GL_TEXTURE_2D, align 4
  %32 = load i32*, i32** %7, align 8
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @gl2_fb_texture_2d(i32 %29, i32 %30, i32 %31, i32 %33, i32 0)
  %35 = load i32, i32* @RARCH_GL_FRAMEBUFFER, align 4
  %36 = call i64 @gl2_check_fb_status(i32 %35)
  %37 = load i64, i64* @RARCH_GL_FRAMEBUFFER_COMPLETE, align 8
  %38 = icmp eq i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %42

40:                                               ; preds = %3
  %41 = call i32 @RARCH_WARN(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %42

42:                                               ; preds = %40, %39
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @gl2_bind_fb(i32) #1

declare dso_local i32 @glDeleteTextures(i32, i32*) #1

declare dso_local i32 @glGenTextures(i32, i32*) #1

declare dso_local i32 @glBindTexture(i32, i32) #1

declare dso_local i32 @gl2_load_texture_image(i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @gl2_fb_texture_2d(i32, i32, i32, i32, i32) #1

declare dso_local i64 @gl2_check_fb_status(i32) #1

declare dso_local i32 @RARCH_WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
